src/objects/Checklist__c.object
<CustomObject>
    <description>Checklists and Forms used at Arrival or Exit.</description>
    <fields>
        <fullName>Agreement_for_Services_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Agreement for Services advocate.</description>
        <inlineHelpText>Agreement for Services advocate.</inlineHelpText>
        <label>Agreement for Services Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Agreement for Services Advocate)</relationshipLabel>
        <relationshipName>Checklists8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_for_Services_Date__c</fullName>
        <description>Agreement for Services completion date.</description>
        <inlineHelpText>Agreement for Services completion date.</inlineHelpText>
        <label>Agreement for Services Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrival_Status_Flag__c</fullName>
        <description>Returns 0 if green, 1 if yellow and 2 if green. Used to display status flag on case record. DO NOT USE ON LAYOUT.</description>
        <formula>IF (
AND(ISBLANK(Tour_Completion_Date__c), ISBLANK( Tour_Given_Advocate__c), ISBLANK(Confidentiality_Rules_Completion_Date__c), ISBLANK(Confidentiality_Rules_Advocate__c),
ISBLANK(Welcome_Packet_Completion_Date__c), ISBLANK(Welcome_Packet_Advocate__c),
ISBLANK(Important_Program_Expectations_Date__c), ISBLANK(Important_Program_Expectations_Advocate__c),
ISBLANK(IOCs_Completion_Date__c), ISBLANK( IOCs_Advocate__c ),
ISBLANK(Outside_Provider_Info_Policy_Date__c), ISBLANK(Outside_Provider_Info_Policy_Advocate__c),
ISBLANK(Particular_Concerns_or_Goals_Date__c),ISBLANK(Particular_Concerns_or_Goals_Advocate__c),
ISBLANK(Give_schedule_planner_date__c), ISBLANK(Give_Schedule_Planner_Advocate__c)),

0,

IF (
OR(ISBLANK(Tour_Completion_Date__c), ISBLANK( Tour_Given_Advocate__c), ISBLANK(Confidentiality_Rules_Completion_Date__c), ISBLANK(Confidentiality_Rules_Advocate__c),
ISBLANK(Welcome_Packet_Completion_Date__c), ISBLANK(Welcome_Packet_Advocate__c),
ISBLANK(Important_Program_Expectations_Date__c), ISBLANK(Important_Program_Expectations_Advocate__c),
ISBLANK(IOCs_Completion_Date__c), ISBLANK( IOCs_Advocate__c ),
ISBLANK(Outside_Provider_Info_Policy_Date__c), ISBLANK(Outside_Provider_Info_Policy_Advocate__c),
ISBLANK(Particular_Concerns_or_Goals_Date__c),ISBLANK(Particular_Concerns_or_Goals_Advocate__c),
ISBLANK(Give_schedule_planner_date__c), ISBLANK(Give_Schedule_Planner_Advocate__c)),

1,

2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arrival Status Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arrival_Status__c</fullName>
        <formula>IF (
AND(ISBLANK(Tour_Completion_Date__c), ISBLANK( Tour_Given_Advocate__c), ISBLANK(Confidentiality_Rules_Completion_Date__c), ISBLANK(Confidentiality_Rules_Advocate__c),
ISBLANK(Welcome_Packet_Completion_Date__c), ISBLANK(Welcome_Packet_Advocate__c),
ISBLANK(Important_Program_Expectations_Date__c), ISBLANK(Important_Program_Expectations_Advocate__c),
ISBLANK(IOCs_Completion_Date__c), ISBLANK( IOCs_Advocate__c ),
ISBLANK(Outside_Provider_Info_Policy_Date__c), ISBLANK(Outside_Provider_Info_Policy_Advocate__c),
ISBLANK(Particular_Concerns_or_Goals_Date__c),ISBLANK(Particular_Concerns_or_Goals_Advocate__c),
ISBLANK(Give_schedule_planner_date__c),  ISBLANK(Give_Schedule_Planner_Advocate__c)), 

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;),

IF (
OR(ISBLANK(Tour_Completion_Date__c), ISBLANK( Tour_Given_Advocate__c), ISBLANK(Confidentiality_Rules_Completion_Date__c), ISBLANK(Confidentiality_Rules_Advocate__c),
ISBLANK(Welcome_Packet_Completion_Date__c), ISBLANK(Welcome_Packet_Advocate__c),
ISBLANK(Important_Program_Expectations_Date__c), ISBLANK(Important_Program_Expectations_Advocate__c),
ISBLANK(IOCs_Completion_Date__c), ISBLANK( IOCs_Advocate__c ),
ISBLANK(Outside_Provider_Info_Policy_Date__c), ISBLANK(Outside_Provider_Info_Policy_Advocate__c),
ISBLANK(Particular_Concerns_or_Goals_Date__c),ISBLANK(Particular_Concerns_or_Goals_Advocate__c),
ISBLANK(Give_schedule_planner_date__c),  ISBLANK(Give_Schedule_Planner_Advocate__c)), 

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;),

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;)))</formula>
        <label>Arrival Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record__c</fullName>
        <description>The parent case record.</description>
        <inlineHelpText>The parent case record.</inlineHelpText>
        <label>Case Record</label>
        <referenceTo>Case_Record__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Collect_Pers_Docs_from_Staff_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Collect Pers Docs from Staff Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Collect Pers Docs from Staff Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMu7o</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collect_Personal_Docs_from_Staff_Date__c</fullName>
        <inlineHelpText>Including housing applications, important papers,  no NB referrals - remove advocate names from paperwork</inlineHelpText>
        <label>Collect Personal Docs from Staff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Confidentiality Agreement advocate.</description>
        <inlineHelpText>Confidentiality Agreement advocate.</inlineHelpText>
        <label>Confidentiality Agreement Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Confidentiality Agreement Advocate)</relationshipLabel>
        <relationshipName>ChecklistsqscR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agreement_Date__c</fullName>
        <description>Confidentiality Agreement completion date.</description>
        <inlineHelpText>Confidentiality Agreement completion date.</inlineHelpText>
        <label>Confidentiality Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agrmt_Reqs_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Confidentiality Agrmt Reqs Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Confidentiality Agrmt Reqs Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMu8T</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Agrmt_Requirements_Date__c</fullName>
        <label>Confidentiality Agrmt Requirements Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Rules_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Confidentiality Rules Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Confidentiality Rules Advocate)</relationshipLabel>
        <relationshipName>Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confidentiality_Rules_Completion_Date__c</fullName>
        <description>2-block parking, 6-block meeting other people, our loc and neighborhood not to be shared.</description>
        <inlineHelpText>2-block parking, 6-block meeting other people, our loc and neighborhood not to be shared.</inlineHelpText>
        <label>Confidentiality Rules Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coordinate_Exit_with_New_Prog_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Coordinate Exit with New Prog Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Coordinate Exit with New Prog Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMtil</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinate_Exit_with_New_Prog_Date__c</fullName>
        <inlineHelpText>Contact THP Advocates. Inform them of the move. New address and contact info</inlineHelpText>
        <label>Coordinate Exit with New Prog Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSHS_Feedback_Survey_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DSHS Feedback Survey Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (DSHS Feedback Survey Advocate)</relationshipLabel>
        <relationshipName>Checklists4Ghq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSHS_Feedback_Survey_Date__c</fullName>
        <label>DSHS Feedback Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discuss_Exit_Protocol_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Discuss Exit Protocol Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Discuss Exit Protocol Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMrZy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discuss_Exit_Protocol_Date__c</fullName>
        <inlineHelpText>Clean room, wash/return linens (if done - ONE taxi)</inlineHelpText>
        <label>Discuss Exit Protocol Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Eval_Forwarding_Addr_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Exit Eval &amp; Forwarding Addr. Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Exit Eval &amp; Forwarding Addr. Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMraX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exit_Evaluation_Forwarding_Addr_Date__c</fullName>
        <label>Exit Evaluation &amp; Forwarding Addr. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Packet_Given_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Exit Packet Given Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Exit Packet Given Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMrWQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exit_Packet_Given_Date__c</fullName>
        <label>Exit Packet Given Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exit_Status_Flag__c</fullName>
        <description>Returns 0 if green, 1 if yellow and 2 if green. Used to display status flag on case record. DO NOT USE ON LAYOUT.</description>
        <formula>IF ( 
AND(ISBLANK(Exit_Packet_Given_Advocate__c),
ISBLANK(Exit_Packet_Given_Date__c),
ISBLANK(Shelter_List_Check_Day_One_Advocate__c), ISBLANK(Shelter_List_Check_Day_One_Date__c), 
ISBLANK(Discuss_Exit_Protocol_Advocate__c), ISBLANK(Discuss_Exit_Protocol_Date__c), 
ISBLANK(Exit_Eval_Forwarding_Addr_Advocate__c), ISBLANK(Exit_Evaluation_Forwarding_Addr_Date__c), 
ISBLANK(Coordinate_Exit_with_New_Prog_Advocate__c), ISBLANK(Coordinate_Exit_with_New_Prog_Date__c), 
ISBLANK(Refer_to_CAP_if_Appropriate_Advocate__c), ISBLANK(Refer_to_CAP_if_Appropriate_Date__c), 
ISBLANK(Collect_Pers_Docs_from_Staff_Advocate__c),
ISBLANK(Collect_Personal_Docs_from_Staff_Date__c), 
ISBLANK(Self_Sufficiency_Plan_Advocate__c), ISBLANK(Self_Sufficiency_Plan_Date__c), 
ISBLANK(Update_Safety_Plan_Advocate__c),
ISBLANK(Update_Safety_Plan_Date__c),
ISBLANK(Confidentiality_Agrmt_Reqs_Advocate__c),
ISBLANK(Confidentiality_Agrmt_Requirements_Date__c)), 

0, 

IF ( 
OR(ISBLANK(Exit_Packet_Given_Advocate__c),
ISBLANK(Exit_Packet_Given_Date__c),
ISBLANK(Shelter_List_Check_Day_One_Advocate__c), ISBLANK(Shelter_List_Check_Day_One_Date__c), 
ISBLANK(Discuss_Exit_Protocol_Advocate__c), ISBLANK(Discuss_Exit_Protocol_Date__c), 
ISBLANK(Exit_Eval_Forwarding_Addr_Advocate__c), ISBLANK(Exit_Evaluation_Forwarding_Addr_Date__c), 
ISBLANK(Coordinate_Exit_with_New_Prog_Advocate__c), ISBLANK(Coordinate_Exit_with_New_Prog_Date__c), 
ISBLANK(Refer_to_CAP_if_Appropriate_Advocate__c), ISBLANK(Refer_to_CAP_if_Appropriate_Date__c), 
ISBLANK(Collect_Pers_Docs_from_Staff_Advocate__c),
ISBLANK(Collect_Personal_Docs_from_Staff_Date__c), 
ISBLANK(Self_Sufficiency_Plan_Advocate__c), ISBLANK(Self_Sufficiency_Plan_Date__c), 
ISBLANK(Update_Safety_Plan_Advocate__c),
ISBLANK(Update_Safety_Plan_Date__c),
ISBLANK(Confidentiality_Agrmt_Reqs_Advocate__c),
ISBLANK(Confidentiality_Agrmt_Requirements_Date__c)), 

1, 

2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exit Status Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exit_Status__c</fullName>
        <description>Shows a colored flag depending on which fields are missing in the checklist.</description>
        <formula>IF ( 
AND(ISBLANK(Exit_Packet_Given_Advocate__c), ISBLANK(Exit_Packet_Given_Date__c), ISBLANK(Shelter_List_Check_Day_One_Advocate__c), ISBLANK(Shelter_List_Check_Day_One_Date__c), 
ISBLANK(Discuss_Exit_Protocol_Advocate__c), ISBLANK(Discuss_Exit_Protocol_Date__c), 
ISBLANK(Exit_Eval_Forwarding_Addr_Advocate__c), ISBLANK(Exit_Evaluation_Forwarding_Addr_Date__c), 
ISBLANK(Coordinate_Exit_with_New_Prog_Advocate__c), ISBLANK(Coordinate_Exit_with_New_Prog_Date__c), 
ISBLANK(Refer_to_CAP_if_Appropriate_Advocate__c), ISBLANK(Refer_to_CAP_if_Appropriate_Date__c), 
ISBLANK(Collect_Pers_Docs_from_Staff_Advocate__c),
ISBLANK(Collect_Personal_Docs_from_Staff_Date__c), 
ISBLANK(Self_Sufficiency_Plan_Advocate__c), ISBLANK(Self_Sufficiency_Plan_Date__c), 
ISBLANK(Update_Safety_Plan_Advocate__c),
ISBLANK(Update_Safety_Plan_Date__c),
ISBLANK(Confidentiality_Agrmt_Reqs_Advocate__c),
ISBLANK(Confidentiality_Agrmt_Requirements_Date__c),
ISBLANK(Participant_Feedback_Survey_Advocate__c),
ISBLANK(Participant_Feedback_Survey_Date__c),
ISBLANK(Resident_Evaluation_Survey_Advocate__c),
ISBLANK(Resident_Evaluation_Survey_Date__c),
ISBLANK(DSHS_Feedback_Survey_Advocate__c),
ISBLANK(DSHS_Feedback_Survey_Date__c)
),

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;), 

IF ( 
OR(ISBLANK(Exit_Packet_Given_Advocate__c), 
ISBLANK(Exit_Packet_Given_Date__c), 
ISBLANK(Shelter_List_Check_Day_One_Advocate__c), ISBLANK(Shelter_List_Check_Day_One_Date__c),
ISBLANK(Discuss_Exit_Protocol_Advocate__c), ISBLANK(Discuss_Exit_Protocol_Date__c),
ISBLANK(Exit_Eval_Forwarding_Addr_Advocate__c), ISBLANK(Exit_Evaluation_Forwarding_Addr_Date__c),
ISBLANK(Coordinate_Exit_with_New_Prog_Advocate__c), ISBLANK(Coordinate_Exit_with_New_Prog_Date__c),
ISBLANK(Refer_to_CAP_if_Appropriate_Advocate__c), ISBLANK(Refer_to_CAP_if_Appropriate_Date__c),
ISBLANK(Collect_Pers_Docs_from_Staff_Advocate__c),
ISBLANK(Collect_Personal_Docs_from_Staff_Date__c),
ISBLANK(Self_Sufficiency_Plan_Advocate__c), ISBLANK(Self_Sufficiency_Plan_Date__c),
ISBLANK(Update_Safety_Plan_Advocate__c),
ISBLANK(Update_Safety_Plan_Date__c),
ISBLANK(Confidentiality_Agrmt_Reqs_Advocate__c),
ISBLANK(Confidentiality_Agrmt_Requirements_Date__c),
ISBLANK(Participant_Feedback_Survey_Advocate__c),
ISBLANK(Participant_Feedback_Survey_Date__c),
ISBLANK(Resident_Evaluation_Survey_Advocate__c),
ISBLANK(Resident_Evaluation_Survey_Date__c),
ISBLANK(DSHS_Feedback_Survey_Advocate__c),
ISBLANK(DSHS_Feedback_Survey_Date__c)
),

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;), 

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;)))</formula>
        <label>Exit Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forms_Status_Flag__c</fullName>
        <description>Returns 0 if green, 1 if yellow and 2 if green. Used to display status flag on case record. DO NOT USE ON LAYOUT.</description>
        <formula>IF (
AND(ISBLANK(Agreement_for_Services_Date__c), ISBLANK(Agreement_for_Services_Advocate__c), ISBLANK(Resident_Agreement_Date__c), ISBLANK( Resident_Agreement_Advocate__c ),
ISBLANK(Confidentiality_Agreement_Date__c), ISBLANK(Confidentiality_Agreement_Advocate__c),
ISBLANK(Temporary_Guardianship_Date__c), ISBLANK(Temporary_Guardianship_Advocate__c),
ISBLANK(ROI_Family_Housing_Connection_Date__c ), ISBLANK( ROI_Family_Housing_Connection_Advocate__c),
ISBLANK(Medical_History_Date__c), ISBLANK(Medical_History_Advocate__c),
ISBLANK(Intro_to_GAIN_SS_Form_Date__c),ISBLANK(Intro_to_GAIN_SS_Form_Advocate__c),
ISBLANK(GAIN_SS_Form_Date__c), ISBLANK(GAIN_SS_Form_Advocate__c)),

0,

IF (
OR(ISBLANK(Agreement_for_Services_Date__c), ISBLANK(Agreement_for_Services_Advocate__c), ISBLANK(Resident_Agreement_Date__c), ISBLANK( Resident_Agreement_Advocate__c ),
ISBLANK(Confidentiality_Agreement_Date__c), ISBLANK(Confidentiality_Agreement_Advocate__c),
ISBLANK(Temporary_Guardianship_Date__c), ISBLANK(Temporary_Guardianship_Advocate__c),
ISBLANK(ROI_Family_Housing_Connection_Date__c ), ISBLANK( ROI_Family_Housing_Connection_Advocate__c),
ISBLANK(Medical_History_Date__c), ISBLANK(Medical_History_Advocate__c),
ISBLANK(Intro_to_GAIN_SS_Form_Date__c),ISBLANK(Intro_to_GAIN_SS_Form_Advocate__c),
ISBLANK(GAIN_SS_Form_Date__c), ISBLANK(GAIN_SS_Form_Advocate__c)),

1,
2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forms Status Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forms_Status__c</fullName>
        <formula>IF (
AND(ISBLANK(Agreement_for_Services_Date__c), ISBLANK(Agreement_for_Services_Advocate__c), ISBLANK(Resident_Agreement_Date__c), ISBLANK( Resident_Agreement_Advocate__c ),
ISBLANK(Confidentiality_Agreement_Date__c), ISBLANK(Confidentiality_Agreement_Advocate__c),
ISBLANK(Temporary_Guardianship_Date__c), ISBLANK(Temporary_Guardianship_Advocate__c),
ISBLANK(ROI_Family_Housing_Connection_Date__c ), ISBLANK( ROI_Family_Housing_Connection_Advocate__c),
ISBLANK(Medical_History_Date__c), ISBLANK(Medical_History_Advocate__c),
ISBLANK(Intro_to_GAIN_SS_Form_Date__c),ISBLANK(Intro_to_GAIN_SS_Form_Advocate__c),
ISBLANK(GAIN_SS_Form_Date__c), ISBLANK(GAIN_SS_Form_Advocate__c)),

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;),

IF (
OR(ISBLANK(Agreement_for_Services_Date__c), ISBLANK(Agreement_for_Services_Advocate__c), ISBLANK(Resident_Agreement_Date__c), ISBLANK( Resident_Agreement_Advocate__c ),
ISBLANK(Confidentiality_Agreement_Date__c), ISBLANK(Confidentiality_Agreement_Advocate__c),
ISBLANK(Temporary_Guardianship_Date__c), ISBLANK(Temporary_Guardianship_Advocate__c),
ISBLANK(ROI_Family_Housing_Connection_Date__c ), ISBLANK( ROI_Family_Housing_Connection_Advocate__c),
ISBLANK(Medical_History_Date__c), ISBLANK(Medical_History_Advocate__c),
ISBLANK(Intro_to_GAIN_SS_Form_Date__c),ISBLANK(Intro_to_GAIN_SS_Form_Advocate__c),
ISBLANK(GAIN_SS_Form_Date__c), ISBLANK(GAIN_SS_Form_Advocate__c)),

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;),

IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;)))</formula>
        <label>Forms Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAIN_SS_Form_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>GAIN-SS Form Advocate</description>
        <inlineHelpText>GAIN-SS Form Advocate</inlineHelpText>
        <label>GAIN-SS Form Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (GAIN-SS Form Advocate)</relationshipLabel>
        <relationshipName>ChecklistsqtN8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GAIN_SS_Form_Date__c</fullName>
        <description>GAIN-SS Form completion date.</description>
        <inlineHelpText>GAIN-SS Form completion date.</inlineHelpText>
        <label>GAIN-SS Form Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Give_Schedule_Planner_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Give schedule planner advocate.</description>
        <inlineHelpText>Give schedule planner advocate.</inlineHelpText>
        <label>Give Schedule Planner Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Give Schedule Planner Advocate)</relationshipLabel>
        <relationshipName>Checklists7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Give_schedule_planner_date__c</fullName>
        <description>Give schedule planner completion date.</description>
        <inlineHelpText>Give schedule planner completion date.</inlineHelpText>
        <label>Give Schedule Planner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IOCs_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IOCs  Explained Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (IOCs Advocate)</relationshipLabel>
        <relationshipName>Checklists4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IOCs_Completion_Date__c</fullName>
        <description>Purpose, ways of getting them.</description>
        <inlineHelpText>Purpose, ways of getting them.</inlineHelpText>
        <label>IOCs Explained Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IOCs__c</fullName>
        <formula>IF (AND(NOT(ISBLANK(  IOCs_Completion_Date__c )), NOT(ISBLANK(  IOCs_Advocate__c  ))),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsQ&quot;,&quot;Green&quot;),
(IF (AND(ISBLANK(  IOCs_Completion_Date__c  ), ISBLANK( IOCs_Advocate__c  )),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000GmsY&quot;,&quot;Red&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015e0000000Gmsa&quot;,&quot;Yellow&quot;))))</formula>
        <label>IOCs Explained</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Program_Expectations_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Important Program Expectations Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Important Program Expectations Advocate)</relationshipLabel>
        <relationshipName>Checklists3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Important_Program_Expectations_Date__c</fullName>
        <description>Weekly goals meeting, actively look for housing, curfew, planning ahead (advocates not available 24/7, also encourage non-English speaking residents to inform us if they are interested in specific support groups or if they move their goals meetings to an earlier date so we can get a new interpreter ASAP), chores and communal living, kitchen/pantry guidelines, childcare/supervision (on same floor, Childcare Agreements), access to EJ computer.</description>
        <inlineHelpText>Weekly goals meeting, actively look for housing, curfew, planning ahead ,chores and communal living, kitchen/pantry guidelines, childcare/supervision (on same floor, Childcare Agreements), access to EJ computer.</inlineHelpText>
        <label>Important Program Expectations Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intro_to_GAIN_SS_Form_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Intro to GAIN-SS Form advocate.</description>
        <inlineHelpText>Intro to GAIN-SS Form advocate.</inlineHelpText>
        <label>Intro to GAIN-SS Form Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Intro to GAIN-SS Form Advocate)</relationshipLabel>
        <relationshipName>ChecklistsqtMZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intro_to_GAIN_SS_Form_Date__c</fullName>
        <description>Intro to GAIN-SS Form completion date.</description>
        <inlineHelpText>Intro to GAIN-SS Form completion date.</inlineHelpText>
        <label>Intro to GAIN-SS Form Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_History_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Medical History Advocate</description>
        <inlineHelpText>Medical History Advocate</inlineHelpText>
        <label>Medical History Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Medical History Advocate)</relationshipLabel>
        <relationshipName>Checklistsqszr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_History_Date__c</fullName>
        <description>Medical History completion date.</description>
        <inlineHelpText>Medical History completion date.</inlineHelpText>
        <label>Medical History Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outside_Provider_Info_Policy_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Outside Provider Info &amp; Policy on Missed Appts Advocate.</description>
        <inlineHelpText>Outside Provider Info &amp; Policy on Missed Appts Advocate.</inlineHelpText>
        <label>Outside Provider Info &amp; Policy Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Outside Provider Info &amp; Policy Advocate)</relationshipLabel>
        <relationshipName>Checklists5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outside_Provider_Info_Policy_Date__c</fullName>
        <description>Outside Provider Info &amp; Policy on Missed Appts Date completed.</description>
        <inlineHelpText>Outside Provider Info &amp; Policy on Missed Appts Date completed.</inlineHelpText>
        <label>Outside Provider Info &amp; Policy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participant_Feedback_Survey_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Participant Feedback Survey Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Participant Feedback Survey Advocate)</relationshipLabel>
        <relationshipName>Checklists4Gaz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Feedback_Survey_Date__c</fullName>
        <label>Participant Feedback Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <formula>Case_Record__r.Contact__r.FirstName +&apos; &apos;+ Case_Record__r.Contact__r.LastName</formula>
        <label>Participant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Particular_Concerns_or_Goals_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Particular Concerns or Goals advocate.</description>
        <inlineHelpText>Particular Concerns or Goals advocate.</inlineHelpText>
        <label>Particular Concerns or Goals Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Particular Concerns or Goals Advocate)</relationshipLabel>
        <relationshipName>Checklists6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Particular_Concerns_or_Goals_Date__c</fullName>
        <description>Particular Concerns or Goals completion date.</description>
        <inlineHelpText>Particular Concerns or Goals completion date.</inlineHelpText>
        <label>Particular Concerns or Goals Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ROI_Family_Housing_Connection_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>ROI - Family Housing Connection advocate.</description>
        <inlineHelpText>ROI - Family Housing Connection advocate.</inlineHelpText>
        <label>ROI - Family Housing Connection Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (ROI - Family Housing Connection Advocate)</relationshipLabel>
        <relationshipName>ChecklistsqsqA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Family_Housing_Connection_Date__c</fullName>
        <description>ROI - Family Housing Connection completion date.</description>
        <inlineHelpText>ROI - Family Housing Connection completion date.</inlineHelpText>
        <label>ROI - Family Housing Connection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refer_to_CAP_if_Appropriate_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Refer to CAP if Appropriate Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Refer to CAP if Appropriate Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMu6x</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refer_to_CAP_if_Appropriate_Date__c</fullName>
        <inlineHelpText>Complete screening before exit.</inlineHelpText>
        <label>Refer to CAP if Appropriate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resident_Agreement_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Resident Agreement advocate.</description>
        <inlineHelpText>Resident Agreement advocate.</inlineHelpText>
        <label>Resident Agreement Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Resident Agreement Advocate)</relationshipLabel>
        <relationshipName>Checklists9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resident_Agreement_Date__c</fullName>
        <description>Resident Agreement completion date.</description>
        <inlineHelpText>Resident Agreement completion date.</inlineHelpText>
        <label>Resident Agreement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resident_Evaluation_Survey_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Resident Evaluation Survey Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Resident Evaluation Survey Advocate)</relationshipLabel>
        <relationshipName>Checklists4GgO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resident_Evaluation_Survey_Date__c</fullName>
        <label>Resident Evaluation Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Self_Sufficiency_Plan_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Self-Sufficiency Plan Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Self-Sufficiency Plan Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMu8S</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Self_Sufficiency_Plan_Date__c</fullName>
        <label>Self-Sufficiency Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shelter_List_Check_Day_One_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Shelter List / Check Day One Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Shelter List / Check Day One Advocate)</relationshipLabel>
        <relationshipName>ChecklistsMrXx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shelter_List_Check_Day_One_Date__c</fullName>
        <label>Shelter List / Check Day One Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temporary_Guardianship_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Temporary Guardianship advocate.</description>
        <inlineHelpText>Temporary Guardianship advocate.</inlineHelpText>
        <label>Temporary Guardianship Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists (Temporary Guardianship Advocate)</relationshipLabel>
        <relationshipName>Checklistsqskq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temporary_Guardianship_Date__c</fullName>
        <description>Temporary Guardianship completion date.</description>
        <inlineHelpText>Temporary Guardianship completion date.</inlineHelpText>
        <label>Temporary Guardianship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Completion_Date__c</fullName>
        <description>Sign in/out, goals sign-up, cleaning supplies, pantry and laundry room (clarify usage guidelines), Serenity Room, teen room (if applicable), library, phone room, garage (point out trash vs recycling.</description>
        <inlineHelpText>Sign in/out, goals sign-up, cleaning supplies, pantry and laundry room (clarify usage guidelines), Serenity Room, teen room (if applicable), library, phone room, garage (point out trash vs recycling.</inlineHelpText>
        <label>Tour Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Given_Advocate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Tour Given Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>